[bug] hopefully fixed movement of header-container on mobile

--- a/assets/scss/layouts/_l-header.scss
+++ b/assets/scss/layouts/_l-header.scss
@@ -10,6 +10,10 @@
   background-position: center;
 }
 
+.c-header-container {
+  margin: rem-calc(0, 20);
+}
+
 .c-header-content {
   text-align: center;
   position: absolute;
